# BaseAL

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml
api/: main.py
app/src/components/pages/: BioDCASE.jsx
core/: __init__.py  active_learner.py  data_exploration.py
core/baselines/: average_results.py  baseline_eval.ipynb
core/baselines/latest/ATBFL/: margin_multilabel_ATBFL_BASEAL_latest.yaml  random_ATBFL_BASEAL_latest.yaml  sklearn_coreset_ATBFL_BASEAL_latest.yaml  sklearn_typiclust_ATBFL_BASEAL_latest.yaml
core/baselines/latest/HSN/: margin_multilabel_BirdSet_BASEAL_latest_HSN_BASEAL.yaml  random_BirdSet_BASEAL_latest_HSN_BASEAL.yaml  sklearn_coreset_BirdSet_BASEAL_latest_HSN_BASEAL.yaml  sklearn_typiclust_BirdSet_BASEAL_latest_HSN_BASEAL.yaml
core/baselines/latest/POW/: margin_multilabel_BirdSet_BASEAL_latest_POW_BASEAL.yaml  random_BirdSet_BASEAL_latest_POW_BASEAL.yaml  sklearn_coreset_BirdSet_BASEAL_latest_POW_BASEAL.yaml  sklearn_typiclust_BirdSet_BASEAL_latest_POW_BASEAL.yaml
core/baselines/latest/UHH/: margin_multilabel_BirdSet_BASEAL_latest_UHH_BASEAL.yaml  random_BirdSet_BASEAL_latest_UHH_BASEAL.yaml  sklearn_coreset_BirdSet_BASEAL_latest_UHH_BASEAL.yaml  sklearn_typiclust_BirdSet_BASEAL_latest_UHH_BASEAL.yaml
core/docs/: 01_getting_started.ipynb  02_understanding_data.ipynb  03_neural_network_model.ipynb  04_active_learning_loop.ipynb  05_complete_pipeline.ipynb  06_experiment_manager.ipynb  07_vis_example.ipynb  biodcase_example.ipynb  warmup_example.ipynb
core/utils/: model.py  sampling.py  visualization.py
