[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "BaseAL"
version = "1.1.8"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch>=2.6",
    "scikit-learn>=1.7.1",
    "pandas>=2.2.3",
    "librosa>=0.10.0",
    "matplotlib>=3.7.0",
    "fastapi (==0.135.1)",
    "uvicorn[standard]==0.24.0",
    "numpy>=1.24.0,<2.0",
    "python-multipart==0.0.6",
    "umap-learn",
    "scikit-activeml>=0.6.2",
    "faiss-cpu",
    "pyyaml",
    "soundfile",
    "jupyter>=1.1.1",
    "renumics-spotlight (>=1.8.0,<2.0.0)",
]


[tool.setuptools]
packages = []  # No packages to include - BaseAL is a project root, not a package

[tool.uv]
required-environments = ["sys_platform == 'win32' and python_full_version >= '3.11' and python_full_version < '3.13'"]

[tool.uv.sources]
bacpipe = { workspace = true }
